# cerberus-re-skill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
benchmarks/: AGENT_BENCHMARK_PLAN.md  agent_benchmark.v1.json
cerberus_re_skill/: __init__.py  __main__.py  cli.py  cli_runtime.py
ghidra_re_skill/: cli.py
powershell/: GhidraRe.Common.ps1  GhidraRe.psd1  GhidraRe.psm1
references/: apple-macho-notes.md  command-surface.md  frida-diagnostics.md  local-validation-matrix.md  operating-workflows.md  output-files.md  raw-bridge-recipes.md  triage-outputs.md
scripts/: agent_benchmark.py  common.sh  ghidra_apply_finding  ghidra_build_authstub_map  ghidra_classify_small_functions  ghidra_describe_objc_class  ghidra_describe_objc_protocol  ghidra_describe_selector  ghidra_describe_swift_type  ghidra_diff  ghidra_export_apple_bundle  ghidra_export_triage_bundle  ghidra_frida_heap_scan  ghidra_frida_trace  ghidra_function_dossier  ghidra_generate_harness  ghidra_generate_xpc_harness  ghidra_import_analyze  ghidra_lldb_enrich  ghidra_lldb_symbols  ghidra_lldb_trace  ghidra_macos_import_backend.py  ghidra_notes_backend.py  ghidra_objc_message_flow  ghidra_objc_surface_report  ghidra_polish_release  ghidra_resolve_swift_outlined  ghidra_run_script  ghidra_swift_surface_backend.py  ghidra_swift_surface_report  ghidra_trace_classref  ghidra_xpc_graph  ghidra_xpc_surface  install_dependencies.py  strip_hardened_runtime
templates/: config.env.example
tests/: test_authstub_map.py  test_breakpoint_plan_preflight.py  test_bridge.py  (+46 more)
(+127 files in other folders)
